chore (collapse.scss): correct style and animation

--- a/src/scss/components/_collapse.scss
+++ b/src/scss/components/_collapse.scss
@@ -5,25 +5,20 @@
   position: relative;
   z-index: 998;
   overflow: hidden;
-  padding: 10px 20px 20px 20px;
-  // transition: transform max-height 0.3s ease-in-out;
   .arrow {
     transform: rotate(0deg);
   }
 }
+.textContainer {
+  padding: 10px 20px 20px 20px;
+}
 
 .collapseTexte.closed {
-  // max-height: 0;
-  // opacity: 0;
-  // transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
   transform: translateY(-100%);
   transition: transform 0.3s ease-in-out;
 }
 
 .collapseTexte.open {
-  // max-height: 120px;
-  // opacity: 1;
-  // transition: transform max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
   transform: translateY(0);
   transition: transform 0.3s ease-in-out;
 }
@@ -37,6 +32,7 @@
 
 .collapseComponent {
   margin-bottom: 20px;
+  overflow: hidden;
   .arrow {
     transform: rotate(0deg);
     transition: transform 0.3s ease-in-out;
@@ -70,8 +66,13 @@
   border-radius: 0 0 5px 5px;
   background-color: #f6f6f6;
   text-align: start;
-}
-
-.collapseComponent {
-  overflow: hidden;
+  ul {
+    list-style: none;
+    color: #ff6060;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 142.6%;
+    padding: 10px 20px;
+  }
 }
